# boot.dev-static-site-gen

./: .gitignore  README.md  build.sh  mise.toml  pyproject.toml
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
src/: htmlnode.py  main.py  test_htmlnode.py  test_textnode.py  texthelpers.py  textnode.py
