[project]
name = "boot-dev-static-site-gen"
version = "0.1.0"
description = ""
authors = [{ name = "G", email = "g@devnull.rip" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["jinja2 (>=3.1.6,<4.0.0)"]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
